// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-15.emotion-15.emotion-15.emotion-15.emotion-15.emotion-15.emotion-15 {
  background-color: #ffffff;
  background-color: var(--wp-g2-surface-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  position: relative;
  --wp-g2-surface-background-size: 12px;
  --wp-g2-surface-background-size-dotted: 11px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  box-shadow: 0 0 0 1px var(--wp-g2-surface-border-color);
  outline: none;
  border-radius: 2px;
  border-radius: var(--wp-g2-card-border-radius);
}

.emotion-15.emotion-15.emotion-15.emotion-15.emotion-15.emotion-15.emotion-15 .components-card-body {
  max-height: 80vh;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 3) calc(4px * 3);
  padding: var(--wp-g2-card-padding);
}

@media only screen and ( min-device-width:40em ) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0::-webkit-scrollbar {
    height: 12px;
    width: 12px;
  }

  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0::-webkit-scrollbar-track {
    background-color: transparent;
  }

  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, 0.04);
    background: var(--wp-g2-color-scrollbar-track);
    border-radius: 8px;
  }

  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0::-webkit-scrollbar-thumb {
    background-clip: padding-box;
    background-color: rgba(0, 0, 0, 0.2);
    background-color: var(--wp-g2-color-scrollbar-thumb);
    border: 2px solid rgba( 0,0,0,0 );
    border-radius: 7px;
  }

  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0:hover::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.5);
    background-color: var(--wp-g2-color-scrollbar-thumb-hover);
  }
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0:first-of-type {
  border-top-left-radius: 2px;
  border-top-left-radius: var(--wp-g2-card-border-radius);
  border-top-right-radius: 2px;
  border-top-right-radius: var(--wp-g2-card-border-radius);
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0:last-of-type {
  border-bottom-left-radius: 2px;
  border-bottom-left-radius: var(--wp-g2-card-border-radius);
  border-bottom-right-radius: 2px;
  border-bottom-right-radius: var(--wp-g2-card-border-radius);
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 1px 2px 0 rgba(0 ,0,0,0.05);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11.emotion-11 {
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 5px 10px 0 rgba(0 ,0,0,0.25);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

.emotion-5 {
  background: transparent;
  display: block;
  margin: 0 !important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
}

.emotion-7 {
  border-radius: 2px;
}

<div
  class="components-surface components-card emotion-15 emotion-1 emotion-2"
  data-wp-c16t="true"
  data-wp-component="Card"
>
  <div
    class="emotion-1 emotion-2"
  >
    <iframe
      aria-hidden="true"
      frameborder="0"
      src="about:blank"
      style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
    <div
      class="components-scrollable wp-components-scrollable components-card-body ic-y3p1xi emotion-0 emotion-1 emotion-2"
      data-g2-c16t="true"
      data-g2-component="Scrollable"
      data-wp-c16t="true"
      data-wp-component="CardBody"
    >
      Code is Poetry
    </div>
  </div>
  <div
    aria-hidden="true"
    class="emotion-5 emotion-6 components-elevation emotion-7 emotion-1 emotion-2"
    data-wp-c16t="true"
    data-wp-component="Elevation"
  />
  <div
    aria-hidden="true"
    class="emotion-5 emotion-11 components-elevation emotion-7 emotion-1 emotion-2"
    data-wp-c16t="true"
    data-wp-component="Elevation"
  />
</div>
`;

exports[`props should render label 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,12 +1,12 @@
  <div
-   aria-label="show"
+   aria-label="popover-base-popover"
    class="components-popover-content wp-components-popover-content components-popover wp-components-popover ic-fzg5i9 ic-1o22l1x css-xnf55w css-1mm2cvy-View egi4jkx0"
    data-dialog="true"
    data-g2-c16t="true"
    data-g2-component="Popover"
-   id="labelled-popover"
+   id="base-popover"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="components-surface components-card css-6k5pts css-1mm2cvy-View egi4jkx0"
`;

exports[`props should render without content 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,12 +1,12 @@
  <div
-   aria-label="popover-contentless-popover"
+   aria-label="popover-base-popover"
    class="components-popover-content wp-components-popover-content components-popover wp-components-popover ic-fzg5i9 ic-1o22l1x css-xnf55w css-1mm2cvy-View egi4jkx0"
    data-dialog="true"
    data-g2-c16t="true"
    data-g2-component="Popover"
-   id="contentless-popover"
+   id="base-popover"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="components-surface components-card css-6k5pts css-1mm2cvy-View egi4jkx0"
@@ -21,10 +21,19 @@
          frameborder="0"
          src="about:blank"
          style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
+       <div
+         class="components-scrollable wp-components-scrollable components-card-body ic-y3p1xi css-yk69wq css-1mm2cvy-View egi4jkx0"
+         data-g2-c16t="true"
+         data-g2-component="Scrollable"
+         data-wp-c16t="true"
+         data-wp-component="CardBody"
+       >
+         Code is Poetry
+       </div>
      </div>
      <div
        aria-hidden="true"
        class="css-zsg5ag-Elevation css-1yc4u8p components-elevation css-icip60 css-1mm2cvy-View egi4jkx0"
        data-wp-c16t="true"
`;
